--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.8",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.11.17",
     "jsvectormap": "^1.5.3",
