--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^7.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0"
   },
