--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.3",
     "apexcharts": "^3.45.2",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.11.17",
+    "free-nextadmin-nextjs": "file:",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.460.0",
     "next": "^14.1.4",
