--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "@mui/x-date-pickers": "^7.22.3",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "apexcharts": "^3.45.2",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
@@ -20,9 +21,11 @@
     "free-nextadmin-nextjs": "file:",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.460.0",
+    "moment": "^2.30.1",
     "next": "^14.1.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
