--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "@mui/x-date-pickers": "^7.22.3",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "apexcharts": "^3.45.2",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.11.17",
@@ -31,7 +33,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-select": "^5.8.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
