--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
